AOO-401 Q A //fix link alignment on resources

--- a/Resources/public/css/main.css
+++ b/Resources/public/css/main.css
@@ -627,7 +627,7 @@ nav .inline-list .search-icon span {
 
 .block-grid-new-padding.block-grid-link li a h4 {
     font-weight: bold;
-    text-align: left;
+    text-align: center;
 }
 
 /* breadcrumbs */
